--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,6 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,10 +14,10 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
-   
-   "next-auth": "^4.24.5",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   }
 }
